perf(prediction): P26 — binary-search stops-ahead lookup in RouteGeometryCache
getStopsAhead and getNextStop walked the full route stops list on every
call (linear scan filtering by stopFraction > currentFraction + EPS).
Both are called per-vehicle on every prediction tick.

Replace with binary search on the existing stopFractionsCache double[]
(already sorted by distanceFromStartMeters in cacheStopFractions).
Extract firstStopIndexAhead() to share the lookup:

    int idx = Arrays.binarySearch(fractions, currentFraction + 0.0001);
    return idx >= 0 ? idx + 1 : -idx - 1;

  - getNextStop: O(N) → O(log N)
  - getStopsAhead: O(N) → O(log N + k) where k = number of stops ahead

Behavior preserved: same EPS guard, same "strictly greater than fraction"
semantics. The routeStopsCache list is in lock-step with stopFractionsCache
(both built from the same `sorted` collection in cacheStopFractions),
so index alignment is invariant.

getStopFractionByCoordinates left as O(N) — true spatial query, depends
on P6 spatial-index work per audit's dependency annotation.

Tests: 1973/1973 pass.